--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
 <main class="container my-4">
     <h2>About The Project</h2>
-    <p>Информация о проекте — здесь рассказывается цель, авторы, источники и контакты.</p>
+    <p>Информация о проекте </p>
 </main>
 
 <script src="./js/data.js"></script>
