--- a/index.html
+++ b/index.html
@@ -4,77 +4,13 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./CSS/style-one.css"/>
     <title>Home</title>
-    <style>
-        /* ——— ПЛАНЕТА + декор ——— */
-        .planet-float {
-            float: right; /* встаёт справа */
-            width: 390px; /* размер планеты (можно 300–380px) */
-            margin: 0 0 2rem 2rem; /* отступ слева, чтобы текст не лип */
-            border-radius: 80%; /* круг */
-            border: 3px solid #b22222; /* марсианская рамка */
-            padding: 6px; /* белая окантовка из фона */
-            background: #fff; /* белая окантовка */
-            box-shadow: 0 18px 40px rgba(0, 0, 0, .35), /* мягкая тень под планетой */ inset 0 0 30px rgba(255, 255, 255, .35); /* лёгкий «глянец» */
-            display: block;
-            shape-outside: circle(50%); /* ВАУ: текст обтекает по кругу */
-        }
-
-        /* Контейнер для планеты — чтобы приклеить ленту/бейдж */
-        .figure-planet {
-            position: relative; /* база для абсолютных элементов */
-            /* хитрость для кросс‑браузерности shape-outside:
-               приклеим высоту контейнера к картинке, чтобы не схлопывался */
-            /* (если не нужно — можно убрать) */
-        }
-
-        /* Бейдж-лента на углу планеты */
-        .badge {
-            position: absolute;
-            top: 12px;
-            right: -8px;
-            background: #8B0000;
-            color: #fff;
-            font: 700 12px/1 'Orbitron', sans-serif;
-            padding: 6px 10px;
-            border-radius: 6px;
-            box-shadow: 0 6px 18px rgba(0, 0, 0, .25);
-        }
-
-
-        .home-intro {
-            text-align: left;
-        }
-    </style>
+    <link href="CSS/style-index.css" rel="stylesheet"/>
 
 </head>
 <body>
-<!--<header class="site-header">-->
-<!--    <h1 class="brand">The Newest Martian Chronicles</h1>-->
-<!--    <nav class="site-nav" aria-label="Main Navigation">-->
-<!--        <ul class="nav justify-content-center flex-nowrap">-->
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link active" href="index.html">Home</a>-->
-<!--            </li>-->
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link" href="history.html">History</a>-->
-<!--            </li>-->
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link" href="myths.html">Myths</a>-->
-<!--            </li>-->
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link" href="photos.html">Photo</a>-->
-<!--            </li>-->
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link" href="about.html">About The Project</a>-->
-<!--            </li>-->
-<!--        </ul>-->
-<!--    </nav>-->
-<!--    <p class="tagline">Explore the Red Planet</p>-->
-<!--</header>-->
+
 <main class="home-intro">
-<!--    <audio autoplay loop>-->
-<!--        <source src="./music/999.mp3" type="audio/mpeg">-->
-<!--    </audio>-->
+
 
     <!-- ОБЁРТКА для планеты, чтобы приклеить бейдж и орбиту -->
     <figure class="figure-planet">
@@ -113,9 +49,7 @@
         to the Red Planet.</p>
 
 </main>
-<!--<footer>-->
-<!--    &copy; 2025 The Newest Martian Chronicles-->
-<!--</footer>-->
+
 <script src="./js/data.js"></script>
 <script src="./js/common.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
