--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Roboto&display=swap" rel="stylesheet">
+    <link type="image/x-icon" rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/4287/4287555.png"/>
+    <link href="CSS/style-index.css" rel="stylesheet"/>
     <link rel="stylesheet" href="./CSS/style-one.css"/>
     <title>Home</title>
-    <link href="CSS/style-index.css" rel="stylesheet"/>
+
 
 </head>
 <body>
