--- a/about.html
+++ b/about.html
@@ -9,11 +9,36 @@
     <link rel="stylesheet" href="./CSS/style-one.css">
 
     <style>
-        #site-header-container header { display:flex; flex-direction:column; align-items:center; text-align:center; padding:1.25rem 1rem; }
-        #site-header-container .site-nav ul { justify-content:center; }
-        #site-header-container .brand { color:#b22222; font-size:2.4rem; margin:0; letter-spacing:4px; }
-        .site-audio-controls { display:flex; align-items:center; justify-content:center; gap:.6rem; margin-top:.5rem; }
-        body>main { margin-top:1rem; }
+        #site-header-container header {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            padding: 1.25rem 1rem;
+        }
+
+        #site-header-container .site-nav ul {
+            justify-content: center;
+        }
+
+        #site-header-container .brand {
+            color: #b22222;
+            font-size: 2.4rem;
+            margin: 0;
+            letter-spacing: 4px;
+        }
+
+        .site-audio-controls {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: .6rem;
+            margin-top: .5rem;
+        }
+
+        body > main {
+            margin-top: 1rem;
+        }
     </style>
 </head>
 <body>
