--- a/history.html
+++ b/history.html
@@ -127,10 +127,13 @@
     </article>
     <article>
         <h2>Watch: The Journey to Mars</h2>
+        <div class="figure-wrap">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/f_sSzn87ljM?si=dNqf-ZqTanwfrBZv"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+
     </article>
 </main>
 
