--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
 <script src="./js/data.js"></script>
 <script src="./js/common.js"></script>
+<script src="./js/index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
