photos.html =>  photos.js

--- a/photos.html
+++ b/photos.html
@@ -11,47 +11,12 @@
 </head>
 <body>
 <main>
-    <audio autoplay loop>
-        <source src="./music/777.mp3" type="audio/mpeg">
-    </audio>
     <h2>Photo Gallery</h2>
     <section class="gallery">
-        <div class="row g-3">
-            <div class="col-4">
-                <img src="https://photojournal.jpl.nasa.gov/jpeg/PIA25068.jpg" class="img-fluid"
-                     alt="Dust Storm and Jezero Crater">
-            </div>
-            <div class="col-4">
-                <img src="https://photojournal.jpl.nasa.gov/jpegMod/PIA25897_modest.jpg" class="img-fluid"
-                     alt="Looking at the Crater Half Full">
-            </div>
-            <div class="col-4">
-                <img src="https://photojournal.jpl.nasa.gov/jpegMod/PIA25912_modest.jpg" class="img-fluid"
-                     alt="Curiosity's 'Postcard' of 'Marker Band Valley'">
-            </div>
-        </div>
-        <div class="row g-3 mt-2">
-            <div class="col-4">
-                <img src="https://photojournal.jpl.nasa.gov/jpegMod/PIA26632_modest.jpg" class="img-fluid"
-                     alt="Curiosity Captures Mars Landscape While Talking to an Orbiter">
-            </div>
-            <div class="col-4">
-                <img src="https://photojournal.jpl.nasa.gov/jpegMod/PIA26633_modest.jpg" class="img-fluid"
-                     alt="Curiosity Views a Martian Rock Shaped Like Coral">
-            </div>
-            <div class="col-4">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Phobos_colour_2008.jpg" class="img-fluid"
-                     alt="Phobos moon">
-            </div>
-        </div>
-
+        <div class="row g-3"></div>
+        <div class="row g-3 mt-2"></div>
     </section>
-
 </main>
-
-<footer>
-    &copy; 2025 The Newest Martian Chronicles
-</footer>
 
 <script src="./js/data.js"></script>
 <script src="./js/common.js"></script>
