myths.html =>  myths.js

--- a/myths.html
+++ b/myths.html
@@ -19,298 +19,7 @@
     <h2>9 мифов о Марсе, в которые многие верят. А зря</h2>
 
 
-    <div class=" row g-3
-         ">
-
-        <!--1 -->
-        <div class="col-12 col-sm-6 col-lg-4">
-            <div class="mars-card d-flex flex-column h-100">
-                <h3>Миф 1. Марс ярко‑красный</h3>
-                <p>
-
-                    Марс традиционно называют Красной планетой, и в фильмах его пейзажи чаще всего показывают через
-                    фильтр именно этого цвета. Однако на самом деле он совсем не такой. Если вы посмотрите на
-                    фотографии марсоходов Curiosity и Sojourner, то увидите, что пустыня там окрашена в жёлто‑серые
-                    оттенки.
-
-                    Марс действительно выглядит красным с орбиты из‑за богатой окисленным железом пыли — в его
-                    атмосфере буквально летает ржавчина.
-
-                    Но если рассматривать планету с поверхности, а не из космоса, она будет желтоватой.
-                    <img src="./Images/Поверхность%20Марса%20со%20следами%20Curiosity.jpg" class="img-fluid my-2"
-                         alt="Поверхность Марса со следами Curiosity">
-
-
-                    Поверхность Марса со следами Curiosity. Изображение: NASA / JPL‑Caltech / MSSS
-                    Кроме того, на Марсе есть места коричневого, зеленоватого, золотистого или даже почти чёрного
-                    цвета — всё зависит от того, какие минералы там преобладают. Небо на этой планете тоже не
-                    красное, а серое, желтоватое или голубое в разное время суток.
-                </p>
-                <a href="https://ui.adsabs.harvard.edu/abs/2002JGRE..107.5127R/abstract" target="_blank"
-                   class="mt-auto">...Learn More</a>
-            </div>
-        </div>
-
-        <!-- 2 -->
-        <div class="col-12 col-sm-6 col-lg-4">
-            <div class="mars-card d-flex flex-column h-100">
-                <h3>Миф 2. Марс горячий</h3>
-                <p>
-                    Это заблуждение связано с предыдущим. Обычно у людей красный цвет ассоциируется с высокой
-                    температурой, поэтому многие искренне полагают, что на Марсе очень жарко и из‑за этого он
-                    побагровел.
-
-                    Тот же Фрэнк Герберт, например, явно ориентировался на Марс, описывая свою Дюну: пустынная
-                    оранжевая планета с белыми полярными шапками, жители которой страдают от жары. Но реальный Марс
-                    совершенно не похож на Арракис.
-
-                    В действительности средняя температура здесь равняется −63 °С — довольно прохладно, мягко
-                    говоря.
-                    <img src="./Images/Заполненный%20льдом%2082‑километровый%20кратер%20Королёва%20на%20Марсе.jpg"
-                         class="img-fluid my-2" alt="Заполненный льдом 82‑километровый кратер Королёва на Марсе">
-
-                    Жарче всего на Марсе летом на экваторе — температура может достигать аж 27 °C, а однажды были
-                    зафиксированы рекордные 35 °C. Зимой же может ударить мороз: от −80 до −125 °С. А на полюсе все
-                    −153 °C.
-
-                    Так что считать Марс жаркой пустыней, красным подобием Сахары, совершенно неверно.
-                </p>
-                <a href="https://science.nasa.gov/mission/mars-exploration-rovers-spirit-and-opportunity/"
-                   target="_blank" class="mt-auto">...Learn More</a>
-            </div>
-        </div>
-
-        <!-- 3 -->
-        <div class="col-12 col-sm-6 col-lg-4">
-            <div class="mars-card d-flex flex-column h-100">
-                <h3>Миф 3. На Марсе бывают мощные ураганы и пыльные бури</h3>
-                <p>
-                    Ещё одна особенность, которой наделяют Красную планету фантасты и которой она в действительности
-                    не обладает, — мощные ветра. В том же «Марсианине» пыльная буря оказалась настолько сильной, что
-                    перевернула многотонный взлётно‑посадочный модуль космического корабля.
-
-                    Однако на самом деле атмосфера здесь слишком разрежена, чтобы в ней могли случаться такие бури.
-                    И самый страшный ураган человек будет ощущать как лёгкий ветерок, способный разве что волосы
-                    взъерошить.
-
-                    Пожалуйста, если вы читаете это, стоя на Марсе, не снимайте шлем скафандра ради проверки! Это
-                    небезопасно.
-
-                    Пыльные бури на Красной планете действительно случаются, и они приносят исследователям NASA
-                    немало неприятностей. Но не потому, что переворачивают марсоходы и уносят их, а потому, что
-                    засыпают песком солнечные панели, и это может привести к обесточиванию аппарата.</p>
-                <a href="https://www.nasa.gov/feature/goddard/the-fact-and-fiction-of-martian-dust-storms"
-                   target="_blank" class="mt-auto">...Learn More</a>
-            </div>
-        </div>
-
-        <!-- 4 -->
-        <div class="col-12 col-sm-6 col-lg-4">
-            <div class="mars-card d-flex flex-column h-100">
-                <h3>Миф 4. На поверхности Марса есть каналы
-                </h3>
-                <p>
-                    <img src="Images/Карта%20Марса%20по%20Фламмариону%20и%20Антониади,%20на%20которой%20изображены%20марсианские%20каналы.jpg"
-                         class="img-fluid my-2"
-                         alt="Карта Марса по Фламмариону и Антониади, на которой изображены марсианские каналы">
-                    В конце XIX — начале XX века учёные считали, что по поверхности Марса разбросаны некие каналы,
-                    возможно, использовавшися для орошения. Одни считали, что это доказывает существование на Марсе
-                    развитой цивилизации, способной создавать продвинутые гидротехнические сооружения. Другие
-                    объясняли появление «каналов» естественными причинами — рельеф, мол, такой.
-
-                    Однако позднее, в 1907 году, учёные отказались от идеи, что на Марсе эти гидротехнические
-                    сооружения есть, объяснив их существование оптической иллюзией.
-
-                    Полученные через пару лет первые фотографии подтвердили эту версию. А прилетевший в 1965 году
-                    зонд Mariner 4, передавший близкие снимки поверхности планеты, окончательно похоронил теорию
-                    «марсианских каналов».
-                </p>
-                <a href="https://adsabs.harvard.edu//full/2010JBAA..120..240D/0000241.000.html" target="_blank"
-                   class="mt-auto">...Learn More</a>
-            </div>
-        </div>
-
-        <!-- 5 -->
-        <div class="col-12 col-sm-6 col-lg-4">
-            <div class="mars-card d-flex flex-column h-100">
-                <h3>Миф 5. Иногда Марс на небе становится больше, чем полная Луна</h3>
-                <p>
-                    Периодически — в основном в августе — в интернете можно увидеть картинку, на которой Марс
-                    запечатлён рядом с Луной, и они выглядят практически идентичными по размеру. Это объясняется
-                    тем, что Красная планета время от времени встаёт в противостояние с Землёй, приближаясь к ней на
-                    минимальное расстояние.
-                    <img src="./Images/Картинка,%20обычно%20сопровождающая%20рассказы%20о%20«Марсе%20размером%20с%20Луну.jpg
-" class="img-fluid my-2" alt="Картинка, обычно сопровождающая рассказы о «Марсе размером с Луну">
-
-                    Но несмотря на то, что Марс на самом деле вдвое больше Луны, с Земли он выглядит в 500 раз
-                    меньше нашего естественного спутника.
-
-                    Даже при рекордном сближении Земли и Красной планеты последняя смотрится просто как яркая точка,
-                    которую уж никак нельзя спутать с Луной.
-
-                    Марс и Луна, снимок 2005 года
-                    Марс и Луна, снимок 2005 года. Изображение: Amirber / Wikimedia Commons
-                    И да, упоминаемая в этой байке информация о том, что Красная планета и Земля сближаются только
-                    раз в 60 000 лет, тоже неправда. В реальности противостояние планет случается каждые два
-                    года. </p>
-                <a href="http://spider.seds.org/spider/Mars/Add/whenwasmarsclose.pdf" target="_blank"
-                   class="mt-auto">...Learn More</a>
-            </div>
-        </div>
-
-        <!-- 6 -->
-        <div class="col-12 col-sm-6 col-lg-4">
-            <div class="mars-card d-flex flex-column h-100">
-                <h3>Миф 6. На Марсе есть лицо</h3>
-                <p>
-                    В 1976 году космические аппараты Viking 1 и Viking 2 сделали серию снимков марсианского региона,
-                    которому дали название Кидония. На одном из них обнаружилось нечто, напоминающее огромное
-                    человеческое лицо.
-                    <img src="./Images/Лицо%20на%20Марсе.jpg" class="img-fluid my-2" alt="Лицо на Марсе">
-
-
-                    Множество паранаучных изданий сразу заявили, что это творение потерянной высокоразвитой
-                    цивилизации, и окрестили выпуклость «марсианским сфинксом».
-
-                    Правда, когда космические корабли Mars Global Surveyor, Mars Reconnaissance Orbiter и Mars
-                    Express сделали новые снимки Кидонии, стало совершенно очевидно, что никакого лица там нет.
-
-                    Планета Марс и её лицо
-                    Лицо на Марсе в лучшем качестве. Изображение: NASA / JPL / University of Arizona
-                    Но это не мешает фанатам уфологии периодически вспоминать о существовании на Марсе «сфинкса».
-                </p>
-                <a href="https://lifehacker.ru/parejdoliya/" target="_blank" class="mt-auto">...Learn More</a>
-            </div>
-        </div>
-
-
-        <div class="col-12 col-sm-6 col-lg-4">
-            <div class="mars-card d-flex flex-column h-100">
-                <h3>Миф 7. На Марсе была ядерная война</h3>
-                <p>
-                    Как несложно заметить, условия на Марсе в настоящий момент так себе: радиация и тоненькая
-                    бескислородная атмосфера над холодной пустыней. По всей видимости, раньше здесь было поприятнее
-                    — вроде как даже имелись океаны и реки. Но потом что‑то случилось, и Красная планета стала
-                    такой, как сегодня.
-
-
-                    Почему это произошло? Ну, большинство учёных полагают, что в так называемый гесперийский период
-                    (3,5–2,5 миллиарда лет назад) Марс обладал океанами и плотной атмосферой. Но позже — 700
-                    миллионов лет назад — её сдуло солнечным ветром.
-
-                    Вот что бывает, когда забываешь отрастить мощное магнитное поле, как у Земли.
-                    <img src="./Images/Атмосфера%20Марса,%20снимок%20зонда%20Viking,%201976%20год.jpg
-" class="img-fluid my-2" alt="Атмосфера Марса, снимок зонда Viking, 1976 год">
-
-                    Но существует и другая версия, которой придерживаются фанаты альтернативной науки. Якобы
-                    давным‑давно на Марсе жили две высокоразвитые цивилизации, Кидония и Утопия. Что‑то они между
-                    собой не поделили, и как давай друг в друга пулять ядерными ракетами, пока не превратили планету
-                    в безжизненную пустыню.
-
-                    А потом все благополучно умерли. Поэтому‑де на Марсе высокий уровень радиации и повсюду кратеры
-                    — воронки от атомных взрывов.
-
-                    Изображение системы каньонов долины Маринер, Марс
-                    Изображение системы каньонов долины Маринер на Марсе. Изображение: NASA / JPL‑Caltech
-                    Правда, сторонники этой теории не могут объяснить, почему никаких следов таинственные Кидония и
-                    Утопия после себя не оставили. На Земле археологи памятники всяких Древних Египтов невооружённым
-                    взглядом находят, а тут целые цивилизации с атомным оружием ни одного захудалого домишки после
-                    себя не оставили.
-
-                    Да и кратеры на Марсе имеют куда более очевидное объяснение: атмосфера тонкая, астероиды
-                    затормозить не может, вот они и бахают со всей силы. А радиация на Красной планете — результат
-                    воздействия на неё космических лучей высоких энергий, а не каких‑то там бомб.
-
-                    В общем, совершенно понятно, что никакой ядерной войны и высокоразвитой цивилизации на Марсе не
-                    было — тут бы бактерии хоть какие найти, а о высокоорганизованной жизни и речи не идёт.</p>
-                <a href="https://medium.com/the-weird-closet/nuclear-alien-space-wars-a-martian-theory-490a642664f3"
-                   target="_blank" class="mt-auto">...Learn More</a>
-            </div>
-        </div>
-
-        <div class="col-12 col-sm-6 col-lg-4 z-index-group">
-            <div class="mars-card d-flex flex-column h-100">
-                <h3>Миф 8. И если её повторить, Марс снова станет пригодным для жизни
-                </h3>
-                <p>
-                    <img src="Images/AQAKR0gMyOnn886mJXgvjl-T2OIOjW84ZIeZaTB8ZvyWdT_yDWGa_H9Cb6KcwRH1ETYdIJhmTQbNUctUxJI6jeI19a4.webp"
-                         target="_blank"
-                         class="img-fluid my-2">
-                    alt="Илон Маск предлагает взорвать Марс ядерными бомбами">
-                    В 2018 году в интервью американскому комику Стиву Кольберу Илон Маск предложил бахнуть по
-                    полярным шапкам Марса ядерными бомбами. Это якобы должно было согреть его, растопить льды,
-                    устроить парниковый эффект и создать на поверхности Красной планеты новый океан. А там можно и
-                    колонизацию начинать.
-                    <img src="Images/original.jpg" target="_blank" class="img-fluid my-2"
-                         alt="original">
-
-                    Вообще, если посмотреть интервью, а не читать его пересказы, можно заметить, что Маск пошутил.
-
-                    Но многие приняли его план за чистую монету и начали спорить, возможно ли сделать планету
-                    пригодной для жизни. Учёные из Стэнфорда шутки ради подсчитали, сколько энергии понадобится для
-                    превращения марсианских полярных шапок в жидкий океан.
-                    <img src="Images/0_8c76c_57874c9_orig.jpg" target="_blank" class="img-fluid my-2"
-                         alt="0_8c76c_57874c9_orig">
-
-                    И результаты неутешительны: даже если одномоментно взорвать весь мировой запас ядерного оружия
-                    на Марсе, этого не хватит, чтобы испарить твёрдый углекислый газ на полюсах и создать парниковый
-                    эффект в тонкой атмосфере планеты.
-                <div class="video-container video-expand">
-                    <iframe src="https://www.youtube.com/embed/gV6hP9wpMW8?si=THRQw_X4JvG3kJv"
-                            title="YouTube video player"
-                            allowfullscreen
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share">
-                    </iframe>
-                </div>
-                </p>
-                <a href="https://trends.rbc.ru/trends/futurology/602fa0e09a7947edc0bba1c9" target="_blank"
-                   class="mt-auto">...Learn
-                    More</a>
-            </div>
-        </div>
-
-        <div class="col-12 col-sm-12 col-lg-4 z-index-group">
-            <div class="mars-card d-flex flex-column h-100">
-                <h3>Миф 9. Кадры с Марса снимают на острове Девон
-                </h3>
-                <p>
-                    Довольно популярная теория заговора, которая гласит, что NASA не запускала Curiosity,
-                    Opportunity и другие роверы на Марс, а вместо этого катает свои аппараты по острову Девон в
-                    Канаде, рядом с Гренландией. Это пустынная и холодная земля, покрытая песком и льдом, и она
-                    довольно похожа на Красную планету.
-                    <img src="./Images/Трулавская%20низменность,%20остров%20Девон,%20Нунавут,%20Канада.jpg"
-                         target="_blank" class="img-fluid my-2"
-                         alt="Трулавская низменность, остров Девон, Нунавут, Канада">
-
-                    Доказательством скептики считают разнообразные подозрительные объекты, которые то и дело
-                    попадают в объективы NASA: выброшенные на берег рыбы, пробегающие игуаны, крысы, паукообразные
-                    обезьяны и человеческие тени. Последние, видимо, принадлежат членам съёмочной команды.
-                    <img src="Images/breccia_hills_devon_island-1440x1080.jpg" target="_blank" class="img-fluid my-2"
-                         alt="Breccia Hills, Devon Island">
-
-                    Правда, на острове Девон не водятся игуаны и паукообразные обезьяны — климат не тот. Да и
-                    простых грызунов там найти довольно затруднительно.
-                    <img src="Images/haughton_mars_project_devon_island-1440x1080.webp" target="_blank"
-                         class="img-fluid my-2"
-                         alt="Haughton Mars Project, Devon Island">
-
-                    В принципе, вы можете посетить это место с помощью Google Earth и посмотреть, правда ли тамошние
-                    пейзажи похожи на снимки с Curiosity (вообще разница довольно заметная). Марсоходов там не
-                    найти, зато можно нарваться на случайно заплывшего на остров белого медведя.
-                <div class="video-container video-expand">
-                    <iframe src="https://www.youtube.com/embed/xzyOdH6OlV0?si=4I3OyibYJD50hDEs"
-                            title="YouTube video player"
-                            allowfullscreen
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share">
-                    </iframe>
-                </div>
-                </p>
-                <a href="https://canadiangeographic.ca/articles/now-you-can-virtually-explore-mars-on-earth-in-google-street-view/"
-                   target="_blank" class="mt-auto">...Learn More</a>
-            </div>
-        </div>
-
-    </div>
+    <div id="myths-container" class=" row g-3 "></div>
 
 </main>
 
