style-one, button

--- a/about.html
+++ b/about.html
@@ -44,6 +44,7 @@
 <body>
 
 <main class="container my-4">
+    <a href="#" class="back-to-top">⬆ Back to Top</a>
     <h2>About The Project</h2>
     <p>Информация о проекте </p>
 </main>
