--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <title>Home</title>
 </head>
 <body>
-
-<main class="home-intro"></main>
-
+<main class="home-intro">
+    <a href="#" class="back-to-top">⬆ Back to Top</a>
+</main>
 <script src="./js/data.js"></script>
 <script src="./js/common.js"></script>
 <script src="./js/index.js"></script>
