--- a/photos.html
+++ b/photos.html
@@ -11,17 +11,16 @@
 </head>
 <body>
 <main>
+    <a href="#" class="back-to-top">⬆ Back to Top</a>
     <h2>Photo Gallery</h2>
     <section class="gallery">
         <div class="row g-3"></div>
         <div class="row g-3 mt-2"></div>
     </section>
 </main>
-
 <script src="./js/data.js"></script>
 <script src="./js/common.js"></script>
 <script src="./js/photos.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 </html>
