--- a/about.html
+++ b/about.html
@@ -43,15 +43,20 @@
 </head>
 <body>
 
+<!-- Это изображение-заставка, которое будет на заднем плане -->
+<img src="./Images/kat.jpg" class="about-background" alt="Background image">
+
 <main class="container my-4">
     <a href="#" class="back-to-top">⬆ Back to Top</a>
     <h2>About The Project</h2>
     <p>Информация о проекте </p>
 </main>
 
-<script src="./js/data.js"></script>
 <script src="./js/common.js"></script>
+<script src="./js/data.js"></script>
 <script src="./js/about.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
+
