--- a/index.html
+++ b/index.html
@@ -9,54 +9,14 @@
     <link href="CSS/style-index.css" rel="stylesheet"/>
     <link rel="stylesheet" href="./CSS/style-one.css"/>
     <title>Home</title>
-
-
 </head>
 <body>
-
 <main class="home-intro">
-
-
-    <!-- ОБЁРТКА для планеты, чтобы приклеить бейдж и орбиту -->
-    <figure class="figure-planet">
-        <img
-                class="planet-float"
-                src=./Images/mars-krater-zvezdy.webp
-        >
-        <figcaption class="badge">Welcome to Mars</figcaption>
-        <span class="orbit" aria-hidden="true"></span>
-    </figure>
-
-    <h2>Welcome</h2>
-
-    <p>Have you ever wondered what it would be like to stand on the surface of Mars and look up at a pale blue dot in
-        the sky — our own Earth, hanging there like a faraway lantern? Mars has been a canvas for human imagination for
-        centuries, from ancient myths and fiery omens in the night sky to science fiction epics of the 20th century.
-        Once, we dreamed of canals built by alien civilizations; now we send high-tech rovers, landers, and orbiters to
-        uncover the planet’s true story.</p>
-
-    <p>But Mars is not just a rusty sphere orbiting the Sun. It’s a world of frozen volcanoes taller than Mount Everest,
-        of canyons so vast they would stretch across continents on Earth, and of dust storms that can swallow the entire
-        planet for weeks. Its thin atmosphere and bitter cold would make survival a challenge, yet it offers enough
-        tantalizing hints of water — past and present — to keep scientists asking: could life have ever existed
-        here?</p>
-
-    <p>Every mission to Mars is a gamble with physics, engineering, and human patience. The Red Planet has a habit of
-        swallowing spacecraft — earning the nickname “the spacecraft graveyard” in the early years of exploration. Yet,
-        with each failure came new lessons, and with each success came breathtaking views and groundbreaking data. The
-        Soviet Mars 3, NASA’s Viking landers, the tireless Spirit and Opportunity rovers, and the high-tech Perseverance
-        — they are all part of a long, unfolding story.</p>
-
-    <p>In this project, we’ll journey through that story together. We’ll explore the missions, the myths, the
-        photographs, and the human drive that pushes us toward this small, cold neighbor. Whether you’re here to learn
-        about ancient Martian legends, to see real images from the planet’s surface, or to understand the science behind
-        the exploration, you’ve landed in the right place. Welcome to — your gateway to the Red Planet. — your gateway
-        to the Red Planet.</p>
-
+    <a href="#" class="back-to-top">⬆ Back to Top</a>
 </main>
-
 <script src="./js/data.js"></script>
 <script src="./js/common.js"></script>
+<script src="./js/index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
